# serviceradar-sdk-rust

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: ci.yml  publish.yml
.github/workflows/: ci.yml
examples/http-check/src/: main.rs
examples/tcp-check/src/: main.rs
examples/udp-check/src/: main.rs
examples/widgets-check/src/: main.rs
fixtures/: northbound_action_descriptor.json  northbound_action_invocation.json  northbound_action_result.json
openspec/: project.md
openspec/changes/add-rust-sdk-parity/: design.md  proposal.md  tasks.md
openspec/changes/add-rust-sdk-parity/specs/rust-sdk/: spec.md
src/: action.rs  camera_http.rs  camera_media.rs  camera_plugin.rs  camera_relay.rs  check_descriptor.rs  config.rs  device_discovery.rs  error.rs  execute.rs  http.rs  lib.rs  log.rs  memory.rs  plugin_inputs.rs  result.rs  rtsp.rs  tcp.rs  telemetry.rs  udp.rs  websocket.rs
src/action/: tests.rs
src/camera_http/: tests.rs
src/camera_media/: tests.rs
src/camera_plugin/: tests.rs
src/camera_relay/: tests.rs
src/check_descriptor/: tests.rs
src/config/: tests.rs
src/execute/: tests.rs
src/host/: mod.rs  test_support.rs
src/http/: tests.rs
src/log/: tests.rs
src/memory/: tests.rs
src/plugin_inputs/: tests.rs
src/result/: tests.rs
src/rtsp/: tests.rs
src/tcp/: tests.rs
src/telemetry/: tests.rs
src/udp/: tests.rs
src/websocket/: tests.rs
testdata/: service_monitoring_descriptor.json  service_monitoring_input.json  service_monitoring_result.json
